--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/dinos.png">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Dino Game</title>
 </head>
+
 <body>
     <div class="instrucao"></div>
     <div class="score"></div>
@@ -16,6 +17,7 @@
     </div>
 </body>
 
-<audio  class="jump" src="sons/jump_03.wav" type="audio/ogg" autoplay></audio>
-<script src="main.js"></script>
+<audio class="jump" src="songs/jump_03.wav" type="audio/ogg" autoplay></audio>
+<script src="./js/main.js"></script>
+
 </html>
